--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Sync up to CodeCommit
         uses: tsgit18/sync-up-to-codecommit-action@v1.0.6
         with:
-          repository_name: Docker
+          repository_name: Boilerplates
           aws_region: eu-central-1
