--- a/Vagrant/Wiederherstellungstest/Admin-Server/Vagrantfile
+++ b/Vagrant/Wiederherstellungstest/Admin-Server/Vagrantfile
@@ -1,9 +1,13 @@
 NETWORK_PREFIX = "192.168.152"
 
 Vagrant.configure("2") do |config|
-    config.vm.define "Admin-Server" do |Admin-Server|
-        Admin-Server.vm.box = "generic/debian11"
-        Admin-Server.vm.hostname = "Admin-Server"
-        Admin-Server.vm.network :private_network, ip: "#{NETWORK_PREFIX}.10"
+    config.vm.define "adminServer" do |adminServer|
+        adminServer.vm.box = "generic/debian11"
+        adminServer.vm.hostname = "AdminServer"
+        adminServer.vm.network :private_network, ip: "#{NETWORK_PREFIX}.10"
+        adminServer.vm.provider "libvirt" do |vb|
+            vb.memory = 4096
+            vb.cpus = 4
+        end
     end
 end
