--- a/Ansible/Wiederherstellung/adminServer.yml
+++ b/Ansible/Wiederherstellung/adminServer.yml
@@ -1,4 +1,10 @@
 # Dieses Playbook stellt den AdminServer wieder her. Getestet wird auf einem Vagrant Image um die Konsistenz der Backups von Zeit zu Zeit zu testen. 
+# TODO: Prüfe ob Auslagerung in einzelne Segmente sinnvoll ist?
+# Doppler Env Vars: 
+#set -a
+#source <(doppler secrets download --no-file --format env)
+#set +a
+# Docker Duplicati Command: docker run -v /dockerdata:/restore duplicati/duplicati:latest duplicati-cli --overwrite=True restore s3://postrausch-gmbh-bucket/Admin-Server --restore-path=/restore --auth-password=$AWS_SECRET_ACCESS_KEY --auth-username=$AWS_ACCESS_KEY_ID --passphrase=$PASSPHRASE
 ---
 - hosts: localhost
   gather_facts: no
@@ -17,11 +23,13 @@
         mode: 0755  
     - name: Keyring für Scar Repo installieren
       apt:
+      # Checke ob get_url mit apt ausgeführt werden kann
         deb: /home/vagrant/volian-archive-keyring_0.1.0_all.deb
         state: present
       become: yes
     - name: Keyring für Nala Repo installieren
       apt:
+      # Checke ob get_url mit apt ausgeführt werden kann
         deb: /home/vagrant/volian-archive-nala_0.1.0_all.deb
         state: present
       become: yes
@@ -37,6 +45,7 @@
     - name: Alle Pakete updaten
       shell: nala upgrade -y
       become: yes
+    # Installiere Doppler-CLI für Secret Management
     # Installiere Docker über convenience script
     - name: get convenience script
       get_url:
@@ -49,6 +58,7 @@
     - name: run convenience script
       shell: sh /home/vagrant/get-docker.sh
       become: yes
+    # Führe Duplicati Restore aus
 
 
 
