--- a/Vagrant/Wiederherstellungstest/Admin-Server/Vagrantfile
+++ b/Vagrant/Wiederherstellungstest/Admin-Server/Vagrantfile
@@ -5,7 +5,13 @@ Vagrant.configure("2") do |config|
         adminServer.vm.box = "generic/debian11"
         adminServer.vm.hostname = "AdminServer"
         adminServer.vm.network :private_network, ip: "#{NETWORK_PREFIX}.10"
+        # Linux
         adminServer.vm.provider "libvirt" do |vb|
+            vb.memory = 4096
+            vb.cpus = 4
+        end
+        # Windows
+        adminServer.vm.provider "virtualbox" do |vb|
             vb.memory = 4096
             vb.cpus = 4
         end
